--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,18 +59,20 @@ dependencies:
   flutter_contacts: ^1.1.5+1
   share_plus: ^6.3.0
   file_picker: ^5.2.5
+  geolocator: ^9.0.1
 
   #  IMAGES
   cached_network_image: ^3.1.0
   image_cropper: ^3.0.0
   image_picker: ^0.8.5
-  flutter_svg: ^1.1.6
+  flutter_svg: ^2.0.2
 
   # ICONS
   cupertino_icons: ^1.0.3
 
   # OTHER
   google_fonts: ^3.0.1
+  google_maps_flutter: ^2.2.3
 
 
 dev_dependencies:
@@ -107,4 +109,4 @@ flutter:
     - assets/
     - assets/icons/
     - assets/fonts/
-
+    - assets/markers/
