--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: hackint
 description: A new Flutter project.
 
-publish_to: 'none' 
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: ">=2.19.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -64,14 +64,13 @@ dependencies:
   cached_network_image: ^3.1.0
   image_cropper: ^3.0.0
   image_picker: ^0.8.5
-  flutter_svg: ^1.1.6
+  flutter_svg: ^2.0.2
 
   # ICONS
   cupertino_icons: ^1.0.3
 
   # OTHER
   google_fonts: ^3.0.1
-
 
 dev_dependencies:
   flutter_test:
@@ -107,4 +106,3 @@ flutter:
     - assets/
     - assets/icons/
     - assets/fonts/
-
