--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,7 @@ dev_dependencies:
   build_runner: ^2.2.0
   flutter_gen_runner: ^5.1.0
   injectable_generator: ^1.5.4
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.12.0
 
 flutter_gen:
   output: lib/gen/
@@ -94,12 +94,12 @@ flutter_gen:
     rive: true
     lottie: true
 
-# flutter_icons:
-#   android: "launcher_icon"
-#   ios: true
-#   image_path: "assets/beluga_logo.png"
-#   adaptive_icon_background: "assets/logo_background.png"
-#   adaptive_icon_foreground: "assets/beluga_logo.png"
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/beluga_logo.png"
+  adaptive_icon_background: "assets/logo_background.png"
+  adaptive_icon_foreground: "assets/beluga_logo.png"
 
 flutter:
   uses-material-design: true
